fix: improve temperature and chart readability
- show current and forecast temperatures without the unit suffix
- enlarge the current temperature value in the live circle
- move chart temperature labels above or below the curve based on axis position
- increase the rain/temperature chart height to use more of the display

--- a/server/views/html/styles.css
+++ b/server/views/html/styles.css
@@ -82,6 +82,7 @@ h4.numcircle, #icon-container.numcircle {
 }
 
 #top-banner #temp {
+  font-size: 6vw;
   position: absolute;
   top: 20vh;
   right: 2vw;
